--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # mkdocs main configuration file.
 
 site_name: "UISIC Pages"
-site_url: ""
+site_url: "https://github.com/speleolinux/uisic/"
 repo_url: https://github.com/speleolinux/uisic/
 use_directory_urls: false
 
