--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,8 @@
 # mkdocs main configuration file.
 
 site_name: "UISIC Pages"
-site_url: "https://github.com/speleolinux/uisic/"
+site_url: ""
+#site_url: "https://github.com/speleolinux/uisic/"
 repo_url: https://github.com/speleolinux/uisic/
 use_directory_urls: false
 
@@ -24,12 +25,12 @@ theme:
   #logo: images/uts_logo.png
   name: material
   features:  
-    - navigation.instant
+    #- navigation.instant
     - navigation.top        # Creates a back-to-top "arrow icon" at bottom RHS.
     #- navigation.tabs      # Top-level sections are rendered in a menu layer below the header.
     #- navigation.expand     # Left sidebar will expand all collapsible subsections by default.
 
-extra_css: [css/extra.css]
+#extra_css: [css/extra.css]
 
 nav:
   - 'Home Page': README.md
