Added dubugging page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,4 +36,4 @@ nav:
   - 'Home Page': README.md
   - 'Cavers Dictionary': dictionary.md   
   - 'About this Site': about.md   
-
+  - 'Debugging': debug.md
