--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
           python-version: 3.8
 
       - name: Display Python version
-        run: python -c "import sys; print(Python Version=, sys.version)"
+        run: python -c "import sys; print('Python Version=', sys.version)"
 
 #      - name: Install dependencies           
 #        - run: python -m pip install --upgrade pip
