--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,6 @@ jobs:
         - run: python -m pip install --upgrade pip
         - run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
-      - name: Publish docs
-        run: mkdocs gh-deploy
+#      - name: Publish docs
+#        run: mkdocs gh-deploy
 
