--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
       - name: Display Python version
         run: python -c "import sys; print('Python Version=', sys.version)"
 
-      - name: Install dependencies           
-        - run: python -m pip install --upgrade pip
-        - run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
+#      - name: Install dependencies           
+#        - run: python -m pip install --upgrade pip
+        #- run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
 #      - name: Publish docs
 #        run: mkdocs gh-deploy
