--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,7 @@ jobs:
         run: python -c "import sys; print('Python Version=', sys.version)"
 
       - name: Install dependencies
-        run: python3 -V
-        #- run: python -m pip install --upgrade pip
+        run: python -m pip install --upgrade pip
         #- run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
 #      - name: Publish docs
