--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,9 @@ jobs:
         run: python -c "import sys; print('Python Version=', sys.version)"
 
       - name: Install dependencies
-        - run: python -m pip install --upgrade pip
-        - run: pip install mkdocs mkdocs-material mkdocs-macros-plugin
+        run: | 
+          python -m pip install --upgrade pip
+          pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
 #      - name: Publish docs
 #        run: mkdocs gh-deploy
