--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,18 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
-
-      - name: Display Python version
-        run: python -c "import sys; print('Python Version=', sys.version)"
-
-      - name: Install dependencies
         run: | 
           python -m pip install --upgrade pip
           pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
-      - name: Publish docs
+      #- name: Display Python version
+      #  run: python -c "import sys; print('Python Version=', sys.version)"
+
+      #- name: Install dependencies
+      #  run: | 
+      #    python -m pip install --upgrade pip
+      #    pip install mkdocs mkdocs-material mkdocs-macros-plugin
+
+      - name: Deploy MkDocs
         run: mkdocs gh-deploy --force
 
