--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,24 +17,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it.
       -  uses: actions/checkout@v3
 
       - name: Install Python
         uses: actions/setup-python@v4
         with:
           python-version: 3.8
-        run: | 
-          python -m pip install --upgrade pip
-          pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
       #- name: Display Python version
       #  run: python -c "import sys; print('Python Version=', sys.version)"
 
-      #- name: Install dependencies
-      #  run: | 
-      #    python -m pip install --upgrade pip
-      #    pip install mkdocs mkdocs-material mkdocs-macros-plugin
+      - name: Install MkDocs
+        run: | 
+          python -m pip install --upgrade pip
+          pip install mkdocs mkdocs-material mkdocs-macros-plugin
 
       - name: Deploy MkDocs
         run: mkdocs gh-deploy --force
