--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
       #- name: Display Python version
       #  run: python -c "import sys; print('Python Version=', sys.version)"
 
+  deploy:            
       - name: Install MkDocs
         run: | 
           python -m pip install --upgrade pip
