--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
       #- name: Display Python version
       #  run: python -c "import sys; print('Python Version=', sys.version)"
 
-  deploy:            
+  deploy:
+    steps:
       - name: Install MkDocs
         run: | 
           python -m pip install --upgrade pip
