--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 
 site_name: "UIS Informatics Commission"
 site_url: "https://speleolinux.github.io/uisic/"
-#repo_url: "https://github.com/speleolinux/uisic/"
+repo_url: "https://github.com/speleolinux/uisic/"
 use_directory_urls: true
 
 markdown_extensions:
