--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,9 @@ extra_css: [css/extra.css]
 nav:
   - 'Home Page': index.md
   - 'Cavers Dictionary': dictionary.md
-  - 'Cavers Glossary': glossary.md
+  - 'Cave and Karst Glossary': glossary.md
+  - 'Malcolm Field's Lexicon': fields_lexicon.md  
   - 'About this Site': about.md
-  - 'Recipe Demo': recipe_demo.md
-  - 'Debugging': debug.md
+  #- 'Recipe Demo': recipe_demo.md
+  #- 'Debugging': debug.md
 
