--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ extra_css: [css/extra.css]
 
 nav:
   - 'Home Page': index.md
-  - 'Cavers Dictionary': dictionary.md
+  - 'Cavers Multi-lingual Dictionary': dictionary.md
   - 'Cave and Karst Glossary': glossary.md
   - "Malcolm Field's Lexicon": fields_lexicon.md  
   - 'About this Site': about.md
