--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # mkdocs main configuration file.
 
-site_name: "UIS Informatics Commission Test Site"
+site_name: "UIS Informatics Commission Development Site"
 site_url: "https://speleolinux.github.io/uisic/"
 repo_url: "https://github.com/speleolinux/uisic/"
 use_directory_urls: true
