--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,11 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   push:
-    branches:
+    paths: VERSION
+    #branches:
       # Here you can limit the trigger branch to be "main" etc.
       # - '*'
-      - main
+      #- main
 
 # A job is a set of steps in a workflow
 jobs:
@@ -19,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     # Steps are executed in order and are dependent on each other.
     steps:
-      - name: Check out
+      - name: Checkout
         uses: actions/checkout@v3
       - name: Install pandoc
         run: sudo apt-get install -y pandoc
