--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,14 +32,14 @@ jobs:
       #    echo "</body></html" >> docs/index.html
       - name: Build
         run: |
-          git checkout gh-pages
+          #git checkout gh-pages
           today=$(date +"%A, %d %B %Y") 
-          echo "<p>Test</p>" > index.html
-          echo "<p>${today}</p>" >> index.html
-          git add index.html
+          echo "<p>Test</p>" > docs/index.html
+          echo "<p>${today}</p>" >> docs/index.html
+          git add docs/index.html
           git co -m 'test'
           git push
-          git checkout main
+          #git checkout main
       - name: which pandoc  
         run: |
           which pandoc
