--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         uses: actions/checkout@v3
       - name: Install pandoc
         run: sudo apt-get install -y pandoc
+      - name: which pandoc  
+        run: |
+          which pandoc
       #- name: Generate your content
       #  run: |
       #    echo "Optional placeholder. Put your project's static website generator command here."
@@ -32,17 +35,15 @@ jobs:
       #    echo "</body></html" >> docs/index.html
       - name: Build
         run: |
-          ###git checkout gh-pages
-          today=$(date +"%A, %d %B %Y") 
-          echo "<p>Test</p>" > docs/index.html
+          today=$(date +"%A, %d %B %Y")
+          echo "<html><body>" > docs/index.html
+          echo "<h1>Test</h1>" >> docs/index.html
+          pandoc mfield_data/epa_mfield_2002_utf8_short.md >> docs/index.html
           echo "<p>${today}</p>" >> docs/index.html
+          echo "</body></html>" >> docs/index.html
           git config user.email "noreplay@localhost"
           git config user.name "GIT CI"
           git add docs/index.html
-          git commit -m 'test'
+          git commit -m 'Update by CI'
           git push
-          ###git checkout main
-      - name: which pandoc  
-        run: |
-          which pandoc
 
