Script was not found

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Build2
         run: |
-          make_html.sh
+          ./make_html.sh
           cp epa_mfield_2002_utf8_short.html docs/index.html
           git config user.email "noreplay@localhost"
           git config user.name "GIT CI"
