--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@
 name: Publish Glossary
 run-name: ${{ github.actor }} running a test
 
+# Controls when the action will run.
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -13,12 +14,13 @@ on:
       # - '*'
       - main
 
-# A job is a set of steps in a workflow
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel.
 jobs:
   publish_glossary:
     name: Publishing glossary
     runs-on: ubuntu-latest
-    # Steps are executed in order and are dependent on each other.
+    # Steps are a sequence of tasks that will be executed as part of the job.
+    # They executed in order and are dependent on each other.
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,26 +28,24 @@ jobs:
         run: sudo apt-get install -y pandoc
       #- name: which pandoc  
       #  run: which pandoc
-      #- name: Generate your content
+      #- name: Generate Content
       #  run: |
-      #    echo "Optional placeholder. Put your project's static website generator command here."
       #    echo "<html><body><h1>C & K Test</h1>" > docs/index.html
       #    pandoc mfield_data/epa_mfield_2002_utf8_short.md >> docs/index.html
       #    echo "</body></html" >> docs/index.html
-#      - name: Build
-#        run: |
-#          today=$(date +"%A, %d %B %Y at %H:%M %P")
-#          echo "<html><body>" > docs/index.html
-#          echo "<h1>Test</h1>" >> docs/index.html
-#          pandoc mfield_data/epa_mfield_2002_utf8_short.md >> docs/index.html
-#          echo "<p>This page updated on ${today}</p>" >> docs/index.html
-#          echo "</body></html>" >> docs/index.html
-#          git config user.email "noreplay@localhost"
-#          git config user.name "GIT CI"
-#          git add docs/index.html
-#          git commit -m 'Update by CI'
-#          git push
-
+      #- name: Debug
+      #  run: |
+      #    today=$(date +"%A, %d %B %Y at %H:%M %P")
+      #    echo "<html><body>"  > docs/index.html
+      #    echo "<h1>Test</h1>" >> docs/index.html
+      #    pandoc mfield_data/epa_mfield_2002_utf8_short.md >> docs/index.html
+      #    echo "<p>This page updated on ${today}</p>" >> docs/index.html
+      #    echo "</body></html>" >> docs/index.html
+      #    git config user.email "noreplay@localhost"
+      #    git config user.name "GIT CI"
+      #    git add docs/index.html
+      #    git commit -m 'Update by CI'
+      #    git push
       - name: Build2
         run: |
           ./make_html.sh
@@ -54,5 +54,4 @@ jobs:
           git add docs/index.html
           git commit -m 'Update by CI'
           git push
-
 
