--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,12 +7,12 @@ run-name: ${{ github.actor }} running a test
 on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  push:
-    paths: VERSION
-    branches:
-      # Here you can limit the trigger branch to be "main" etc.
-      # - '*'
-      - main
+  #push:
+  #  paths: VERSION
+  #  branches:
+  #    # Here you can limit the trigger branch to be "main" etc.
+  #    # - '*'
+  #    - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel.
 jobs:
